--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,29 @@
         }
     ],
     "require": {
-        "laravel/framework": "5.*"
+        "laravel/framework": "^5.1.*",
+		"php": "^5.5.9 || ^7.0",
+        
     },
     "autoload": {
-        "classmap": [
-            "app/commands",
-            "app/controllers",
-            "app/models",
-            "app/database/migrations",
-            "app/database/seeds",
-            "app/tests/TestCase.php"
-        ]
+        "psr-4": {
+            "Picahoo\\Communication\\": "src/"
+        }
     },
-    "scripts": {
+	"extra": {
+        "branch-alias": {
+            "dev-develop": "1.0-dev"
+        },
+        "laravel": {
+            "aliases": {
+                "Picahoo": "Picahoo\\\Communicator\\Facades\\CommunicatorFacade"
+            },
+            "providers": [
+                "Picahoo\\Communicator\\CommunicatorServiceProvider"
+            ]
+        }
+    },
+	"scripts": {
         "post-install-cmd": [
             "php artisan clear-compiled",
             "php artisan optimize"
