--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "laravel/framework": "^5.1.*",
-		"php": "^5.5.9 || ^7.0",
+		"php": "^5.5.9 || ^7.0"
         
     },
     "autoload": {
