--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "^5.1.*",
+        "laravel/framework": "5.1.* || 5.2.* || 5.3.* || 5.4.*",
 		"php": "^5.5.9 || ^7.0"
         
     },
